# FoundationModelDataset

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
datasets/das/raw/DAS_safe/: test.xlsx
datasets/seisdare/iberseis/raw/iberseis_data/: IBERSEIS-WA-Geo.asc
datasets/seisdare/iberseis/raw/iberseis_meta/: Descripcion_ficheros_IBERSEIS%20NI%20mig%20and%20stk_dataset.xlsx  Descripcion_ficheros_IBERSEIS%20NI_dataset.xlsx  Descripcion_ficheros_IBERSEIS%20WA_dataset.xlsx  Readme_IBERSEIS%20NI%20mig%20and%20stk.txt  Readme_IBERSEIS%20NI.txt  Readme_IBERSEIS%20WA.txt
datasets/seisdare/sotiel/raw/: seisdare_sotiel_file_description.xlsx  seisdare_sotiel_geometry.xls  seisdare_table1.xlsx
docs/: Subsurface Dataset Research Brief.md  TASKS.md
docs/datasets/: CMiO Evaluation.md  SeisDARE Dataset Shortlist.md  SeisDARE Evaluation - Sotiel-Elvira.md
docs/others/: Foundation Model Strategy - Mineral Exploration.md  McEwen Proposal.docx  Subsurface detection for Foundation Model.docx
scripts/: cmio_baseline_classifier.py  cmio_download.sh  das_visualize.py  inspect_cmio.py  inspect_iberseis_ni.py  inspect_iberseis_wa_geometry.py  inspect_iberseis_wa_segy.py  inspect_seisdare_geometry.py  inspect_seisdare_segy.py  make_seisdare_summary_slide.py
