[project]
name = "foundation-model-dataset"
version = "0.1.0"
description = "Dataset research and inspection for subsurface mining foundation model (EyeClimate)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[dependency-groups]
dev = []
